--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  firebase_storage: ^11.0.6
+  firebase_auth: ^4.1.4
+  firebase_core: ^2.3.0
+  cloud_firestore: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
