--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dev_dependencies:
   firebase_auth: ^4.1.4
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
+  emoji_picker_flutter: ^1.5.1
+  image_picker: ^0.8.6
+  video_player: ^2.4.8
+  uuid: ^3.0.7
+  video_thumbnail: ^0.5.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
